# Physician_Conversion_model

./: README.md  inference.ipynb  pyproject.toml  requirements.txt  setup.py  train_experiment.ipynb  utils.py
.dbx/: project.json
.github/workflows/: onpush.yml  onrelease.yml
conf/: deployment.yml
conf/tasks/: feature_pipepline.yml  sample_ml_config.yml
mlruns/0/: meta.yaml
mlruns/114820925792721688/: meta.yaml
mlruns/114820925792721688/1db94a8ed4dc45bea434f23e007bc628/artifacts/: feature_importance_weight.json
mlruns/114820925792721688/1db94a8ed4dc45bea434f23e007bc628/metrics/: f1_score
mlruns/114820925792721688/1db94a8ed4dc45bea434f23e007bc628/params/: colsample_bytree  gamma
mlruns/114820925792721688/1db94a8ed4dc45bea434f23e007bc628/tags/: mlflow.runName
mlruns/114820925792721688/2848da0b235d48f0ace066e744d96dfd/: meta.yaml
mlruns/114820925792721688/3b500b7e717f4f88890f4c4a911bfb83/: meta.yaml
mlruns/114820925792721688/8da0dfd6c07040588e889da637b7b672/: meta.yaml
mlruns/114820925792721688/eaa9d358779b423ea429c558b4e5fd9b/: meta.yaml
notebooks/: sample_notebook.py
physician_conversion/tasks/: sample_etl_task.py  sample_ml_task.py
physician_conversion_model/: EDA_check.ipynb  common.py  utils.py
physician_conversion_model/conf/: deployment.yml
physician_conversion_model/tasks/: feature_pipeline.py  feature_pipeline_2.py  inference_pipeline.py  training_pipeline.py  utils.py
physician_conversion_model/tasks/notebooks/: feature_store.ipynb
tests/integration/: e2e_test.py
tests/unit/: conftest.py  sample_test.py
(+125 files in other folders)
