[tool.poetry]
name = "physician-conversion-model"
version = "0.1.0"
description = ""
authors = ["deepansh17 <58938351+deepansh17@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
